tests/rosetta/out/Zig/catalan-numbers-2.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:15:9: error: local variable is never mutated
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:15:9: note: consider using 'const'
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:14:9: error: local variable is never mutated
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:14:9: note: consider using 'const'
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:13:9: error: local variable is never mutated
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:13:9: note: consider using 'const'
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:12:9: error: local variable is never mutated
/tmp/TestMochiZigGoldencatalan-numbers-21090362042/001/prog.zig:12:9: note: consider using 'const'
